force-app/main/default/objects/ZuoraConfig__mdt/ZuoraConfig__mdt.object-meta.xml
<CustomObject>
    <description>Zuora API credentials and base URL consumed by ZuoraProxy and ZuoraAuthService.</description>
    <label>Zuora Config</label>
    <pluralLabel>Zuora Configs</pluralLabel>
</CustomObject>