force-app/main/default/objects/ZuoraConfig__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>